fixed container size. need to fix dark mode colors

--- a/packages/proto/public/styles/page.css
+++ b/packages/proto/public/styles/page.css
@@ -39,11 +39,12 @@ h2 .icon-header2{
   width: 40px;
   height: 40px;
   vertical-align: middle;
+  color: var(--color-icon);
 }
 
 /* Reused styles */
 a {
-  color: var(--color-link);
+  color: var(--color-text);
   text-decoration: none;
 }
 
@@ -53,26 +54,23 @@ a:hover {
 
 .container {
   padding: var(--spacing-medium);
-  max-width: 1200px;
+  width: 100%;
   margin: 0 auto;
   font-size: var(--font-size-base);
 }
 
 .list-container {
-  border: 1px solid var(--color-accent-border);
-  background-color: var(--color-list-background);
   padding: var(--spacing-medium);
   margin-bottom: var(--spacing-large);
 }
 
 h2 {
   font-size: var(--font-size-large);
-  color: var(--color-heading2);
+  color: var(--color-heading2-text);
 }
 
 button {
-  background-color: var(--color-highlight);
-  color: var(--color-text-header);
+  color: var(--color-text);
   padding: var(--spacing-small);
   cursor: pointer;
   font-family: Afacad Flux, Arial, sans-serif;
@@ -80,7 +78,7 @@ button {
 }
 
 button:hover {
-  background-color: #392619;
+  background-color: var(--color-text);
   color: var(--color-header-text);
 }
 
